--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <div id="app">Ryan truong</div>
-        <script type="module" src="/main.js"></script>
+        <script type="module" src="./main.js"></script>
     </body>
 </html>
