--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
     <body>
         <div id="app">Ryan truong</div>
         <script type="module" src="./main.js"></script>
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.js"
+            integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+            crossorigin="anonymous"
+        ></script>
+        <script src="js/config.js"></script>
+        <script src="lib/signalr.min.js"></script>
+        <script src="js/signalrConfig.js"></script>
+        <script src="services/chatbotService.js"></script>
+        <script src="js/chatbot.js"></script>
     </body>
 </html>
